# raucle-detect

./: .gitignore  .sonarcloud.properties  CHANGELOG.md  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSING.md  NOTICE  README.md  TRADEMARK.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  detection_rule.md  feature_request.md
.github/workflows/: ci.yml  dco.yml  publish-reference.yml  publish.yml  sync-website.yml
cloud-site/: README.md  astro.config.mjs  package.json
deploy/foundry-mcp-sidecar/: README.md  apim-policy.xml
docs/: aws-oss-credits-application.md  security-model.md
docs/blog/: 2026-05-14-counterfactual-replay.md  2026-05-14-cryptographic-provenance-for-ai-workflows.md  2026-05-14-multimodal-scanning.md  2026-06-09-prove-to-your-regulator.md
docs/designs/: audit-export-v1.md
docs/getting-started/: 01-hello-receipt.md  02-agent-framework.md  03-mcp-clients.md  05-crewai.md  06-prove-a-policy.md  08-aws-mcp.md  08-siem-and-live-view.md  09-openclaw-nemoclaw.md  10-trust-registry.md  11-cross-org-handshake.md  12-compliance-evidence.md  13-agent-passport.md  README.md
docs/proposals/: README.md  agent-framework-middleware.md  agt-pdp-contract.md  agt-pdp-contract.upstream-pr.md  aws-egress-gate.md  aws-egress-nonbypass.md  dotnet-receipt-skd.md  fail-closed-redesign.md  foundry-mcp-gateway.md  openshell-pdp-bridge.md  raucle-mcp-gateway.md  tee-gate.md  vcd-a2a.md
docs/spec/: README.md
docs/standards/: nist-ai-agent-standards-alignment.md  owasp-agentic-top10-mapping.md
examples/a2a_handoff/: README.md  demo.py
examples/agent_framework_demo/: README.md  demo.py  tools.py
examples/aws_custody/: README.md  demo.py
examples/crewai_demo/: README.md  demo.py
examples/cross_org_demo/: README.md  demo.py
examples/end_to_end/: README.md  demo.py
examples/langchain_demo/: README.md  demo.py
paper/: ABSTRACT.md  ANONYMISATION.md  COAUTHOR-OUTREACH.md  DRAFT.md  OUTLINE.md  REVIEW-NOTES.md  REVIEWER-REHEARSAL.md  build-tex.sh  main.tex  references.bib
paper/eval/: PRE-REGISTRATION.md  README.md  RUN-PLAN.md  agentdojo_adapter.py  agentdojo_patches.py  bench_latency.py  configurations.py  defences.py  gated_executor.py  harness.py  injecagent_adapter.py  latency-x86.json  metrics.py  smoke.py  update_draft.py  verify_policies.py
paper/figures/: README.md  fig1-trust-graph.mmd  fig2-asr-bar.mmd  fig3-gate-flow.mmd  fig4-receipt-anatomy.mmd  fig5-cross-org-audit.mmd  fig6-three-primitive-flow.mmd
paper/lean/: Attenuation.lean  Basic.lean  Composition.lean  Gate.lean  README.md  STATUS.md  lakefile.lean
paper/scripts/: check-anon.sh
paper/sections/: 03-design.tex  README.md  placeholder-notice.tex
plugins/openclaw/: index.ts  openclaw.plugin.json  package.json
promptguard/: __init__.py  classifier.py  cli.py  patterns.py  rules.py  scanner.py  server.py
raucle/: __init__.py  __main__.py  _env.py  a2a.py  audit.py  audit_export.py  canary.py  capability.py  classifier.py  cli.py  compliance.py  errors.py  export.py  feed.py  handshake.py  mcp_auth.py  mcp_scanner.py  mcp_server.py  middleware.py  multimodal.py  mutator.py  outcome.py  passport.py  patterns.py  prove.py  provenance.py  replay.py  rules.py  scanner.py  server.py  session.py  siem.py  trust_registry.py  verdicts.py
raucle/broker/: __init__.py  aws_egress.py  cli.py  mcp_server.py  sigv4.py
raucle/integrations/: __init__.py  agent_framework.py  agt.py  agt_backend.py  autogen.py  crewai.py  langchain.py
raucle_detect/: __init__.py  __main__.py  _canon.py  a2a.py  audit.py  audit_export.py  audit_pack.py  canary.py  capability.py  classifier.py  cli.py  compliance.py  errors.py  export.py  feed.py  handshake.py  mcp_scanner.py  mcp_server.py  middleware.py  multimodal.py  mutator.py  outcome.py  passport.py  patterns.py  prove.py  provenance.py  registry.py  replay.py  rules.py  scanner.py  server.py  session.py  siem.py  trust_registry.py  verdicts.py
raucle_detect/broker/: __init__.py  aws_egress.py  mcp_server.py  sigv4.py
raucle_detect/integrations/: __init__.py  agent_framework.py  agt.py  agt_backend.py  autogen.py  crewai.py  langchain.py
reference/: LICENSE  README.md  canon_conformance.py  conformance.py  verify_conformance.py
reference/a2a-provenance/: README.md  package-lock.json  package.json  tsconfig.json
reference/provenance-cs/: README.md
reference/provenance-go/: README.md  canonical.go  go.mod  graph.go  receipt.go  receipt_test.go
reference/provenance-rs/: Cargo.toml  README.md
reference/provenance-rs/examples/: emit.rs  interop.rs
reference/provenance-rs/src/: canonical.rs  graph.rs  lib.rs  receipt.rs
reference/provenance-rs/tests/: receipt.rs
reference/provenance-ts/: README.md  package-lock.json  package.json  tsconfig.json
rules/: agent-attacks.yaml  default.yaml  evasion-advanced.yaml  injection-advanced.yaml  jailbreak-advanced.yaml  rag-poisoning.yaml
scripts/: README.md  cloudtrail_correlate.py  gen_provenance_test_vectors.py  live_aws_smoke.py  sync_website.py
standards/: README.md
tests/: test_a2a.py  test_agent_framework_integration.py  test_agent_framework_real.py  test_agt_backend.py  test_agt_provider.py  test_audit.py  test_audit_export.py  test_audit_pack.py  test_aws_custody_demo.py  test_aws_egress.py  test_aws_mcp_cli.py  test_capability.py  test_classifier.py  test_cli_exit_codes.py  test_compliance.py  test_crewai_integration.py  test_failclosed_redesign.py  test_feed.py  test_handshake.py  test_hygiene_fixes.py  test_langchain_integration.py  test_mcp.py  test_mcp_auth.py  test_mcp_server.py  test_middleware.py  test_multimodal.py  test_outcome.py  test_output.py  test_passport.py  test_prove.py  test_provenance.py  test_registry_drift.py  test_rename_shim.py  test_replay.py  test_round3_security.py  test_rules.py  test_scanner.py  test_scanner_compliance.py  test_sec_audit.py  test_sec_feed.py  (+11 more)
transition/raucle-detect/: README.md  pyproject.toml
(+95 files in other folders)
