[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raucle-detect"
version = "0.15.0"
description = "Open-source verifiable agent accountability — cryptographic capability receipts and formal proofs for LLM agent activity"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Raucle", email = "oss@raucle.com" },
]
keywords = [
    "ai-agents",
    "ai-audit",
    "agent-accountability",
    "capability-receipts",
    "provenance",
    "ai-governance",
    "eu-ai-act",
    "formal-verification",
    "ai-safety",
    "llm",
    "prompt-injection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Zero mandatory dependencies -- the core scanner runs on the stdlib alone.
dependencies = []

[project.optional-dependencies]
rules = ["pyyaml>=6.0"]
ml = ["transformers>=4.30", "torch>=2.0"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "pydantic>=2.0"]
compliance = ["cryptography>=42.0"]
agent-framework = ["agent-framework>=1.0"]
langchain = ["langchain-core>=0.3"]
autogen = ["autogen-agentchat>=0.4"]
multimodal = [
    "Pillow>=10.0",       # image loading + EXIF
    "pytesseract>=0.3.10", # OCR (requires tesseract on PATH)
    "pypdf>=4.0",         # PDF stream extraction
]
proof = [
    "z3-solver>=4.12",    # SMT engine for formal-verification provers
]
dev = [
    "raucle-detect[rules,server,compliance]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["raucle-detect[rules,ml,server,compliance,multimodal,proof]"]

[project.scripts]
raucle-detect = "raucle_detect.cli:main"

[project.urls]
Homepage = "https://raucle.com"
Documentation = "https://github.com/craigamcw/raucle-detect/tree/main/docs"
Repository = "https://github.com/craigamcw/raucle-detect"
Issues = "https://github.com/craigamcw/raucle-detect/issues"

[tool.hatch.build.targets.wheel]
packages = ["raucle_detect"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test files use pytest.importorskip before imports — E402 is unavoidable
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Decorate-only: tests that need the async loop must use @pytest.mark.asyncio
# explicitly. (Switch to ``auto`` later if every async test is the same shape.)
asyncio_mode = "strict"
