[package]
name = "raucle-provenance"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust reference implementation of the Raucle Provenance Receipt v1 spec (https://raucle.com/spec/provenance/v1)"
repository = "https://github.com/craigamcw/raucle-detect"
homepage = "https://raucle.com/spec/provenance/v1"
keywords = ["ai-security", "provenance", "ed25519", "jws", "audit"]
categories = ["cryptography", "authentication"]

[dependencies]
# Ed25519 signatures + SHA-256. ed25519-dalek is the de-facto Rust
# Ed25519 crate; sha2 + base64 are minimal and ubiquitous. serde_json
# is used to parse the payload on verify; canonical *encoding* is our
# own (serde_json does not guarantee a canonical form).
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"
